--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  wakelock: ^0.6.0
+  wakelock_plus: ^1.1.4
   carousel_slider: ^5.0.0
   flutter_local_notifications: ^15.0.0
   get: ^4.6.5
