--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  wakelock_plus: ^1.1.4
+  # Remove wakelock_plus
+  # wakelock_plus: ^1.1.1
+  
+  # Update share_plus to latest version
+  share_plus: 6.3.4
+  
+  # Add this instead of wakelock_plus
+  wakelock: ^0.6.2
+  
+  # Rest of your dependencies remain the same
   carousel_slider: ^5.0.0
   flutter_local_notifications: ^15.0.0
   get: ^4.6.5
@@ -29,7 +38,6 @@ dependencies:
   google_sign_in: ^6.1.5
   fast_contacts: ^4.0.0
   pin_code_fields: ^8.0.1
-  share_plus: ^6.3.2
   chewie: ^1.3.1
   video_player: ^2.8.2
   badges: ^3.1.1
@@ -68,7 +76,6 @@ dependencies:
   flutter_tiktok_sdk: ^0.2.6
   flutter_web_auth: ^0.6.0
   visibility_detector: ^0.4.0+2
-#  tiktok_login_flutter: ^1.0.0
   flutter_otp_text_field: ^1.1.1
   country_picker: ^2.0.23
   firebase_messaging: ^15.2.0
@@ -78,7 +85,6 @@ dependencies:
   gradient_borders: ^1.0.0
   simple_gradient_text: ^1.3.0
   month_year_picker: ^0.4.0+1
-#  local_auth: ^2.1.8
   url_launcher: ^6.1.10
   emoji_picker_flutter: ^4.2.0
   loading_animation_widget: ^1.2.0+4
