--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   rxdart: ^0.27.7
   flutter_staggered_grid_view: ^0.7.0
   google_fonts: ^4.0.4
+  flutter_inappwebview: ^5.7.2+3  # Downgrade to this version
 
 
 
